PERFORMANCE_PASSES_20260304_extracted/PERFORMANCE_PASSES_20260304/RESULTS/pass_runs/20260302_211531/pytest_integration_artifacts_mastereq_tests.stderr.txt
Python 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 
KeyboardInterrupt
>>>   File "<stdin>", line 1
    Get-Process -Name python -ErrorAction SilentlyContinue | Select-Object Id,ProcessName,StartTime,Path | Format-Table -AutoSize | Out-String
                      ^^^^^^
SyntaxError: invalid syntax
>>>   File "<stdin>", line 1
    Get-Process -Name python -ErrorAction SilentlyContinue | Select-Object -First 5 Id,ProcessName | Format-Table -AutoSize
                      ^^^^^^
SyntaxError: invalid syntax
>>> 